--- a/Person_Portfolio/index.html
+++ b/Person_Portfolio/index.html
@@ -6,7 +6,7 @@
     <title>Person_Portfolio</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="body">
     <div class="hero">
         <nav>
             <ul>
@@ -26,7 +26,7 @@
         </p>
         </div>
         <div class = "images">
-            <img src = "./img/gourab_sr4_1712595832463.jpeg" class = "img ">
+            <img src = "./img/portfolio_profile.jpg" class = "img ">
         </div>
         <div class="social">
             <h2 class = "test-socal">Follow Me on Socal midia</h2>
