--- a/Person_Portfolio/index.html
+++ b/Person_Portfolio/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -22,7 +23,7 @@
             <h1>Hi, I'm <span>Gourab Ganguly</span></h1>
             <p>This is my official portfolio<br>
                 I am  now pursing B.Tech in Computer Science and Engineering<br>
-           I am a web developer and designer. I can create a responsive website for you
+           I am a Frontend Developer.
         </p>
         </div>
         <div class = "images">
