some changes (working on js )

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             web projects, ranging from personal blogs to e-commerce platforms.
           </p>
           <div class="action__btns">
-            <button class="hire__me">Hire Me</button>
+            <button class="github">GitHub</button>
             <button class="portfolio">Portfolio</button>
           </div>
         </div>
