--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <div class="content">
         <p class="subtitle">HELLO</p>
         <h1 class="title">
-          I'm <span>Gourab<br />a</span> Web Developer
+          I'm <span id="animated-text">Gourab</span><br /><span id="webdev">a Web Developer</span>
         </h1>
         <p class="description">
           Welcome to my web developer portfolio! I'm Gourab, a skilled and
@@ -67,6 +67,7 @@
 
     </div>
   </section>
+<script src="script.js"></script>
 </body>
 
 </html>
